--- a/frontFarm/src/app/pages/compras/compras.component.html
+++ b/frontFarm/src/app/pages/compras/compras.component.html
@@ -26,7 +26,7 @@
         </small>
 
         <button type="button" class="btn-amarillo-chico d-flex align-items-center" (click)="abrirNuevoProducto()"
-            title="Agregar un nuevo producto">
+            matTooltip="Agregar un nuevo producto">
             <fa-icon [icon]='faPlus'></fa-icon>
             <span class="ms-1">Nuevo</span>
         </button>
