--- a/frontFarm/src/app/pages/reporte-compras/reporte-compras.component.html
+++ b/frontFarm/src/app/pages/reporte-compras/reporte-compras.component.html
@@ -9,7 +9,7 @@
           placeholder="Nombre del proveedor">
         <button *ngIf="proveedor" type="button"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarProveedor()">
+          matTooltip="Limpiar proveedor" (click)="limpiarProveedor()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -22,7 +22,7 @@
           placeholder="Nombre del producto">
         <button *ngIf="productoNombre" type="button"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarProducto()">
+          matTooltip="Limpiar producto" (click)="limpiarProducto()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -35,7 +35,7 @@
           placeholder="Código de barras">
         <button *ngIf="codigoBarras" type="button"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarCodigo()">
+          matTooltip="Limpiar cód. barras" (click)="limpiarCodigo()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -46,7 +46,7 @@
         <input type="number" class="form-control" [(ngModel)]="importeDesde" (keyup.enter)="buscar(true)">
         <button *ngIf="importeDesde" type="button" style="margin-right: 2rem;"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarDesde()">
+          matTooltip="Limpiar importe desde" (click)="limpiarDesde()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -57,7 +57,7 @@
         <input type="number" class="form-control" [(ngModel)]="importeHasta" (keyup.enter)="buscar(true)">
         <button *ngIf="importeHasta" type="button" style="margin-right: 2rem;"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarHasta()">
+          matTooltip="Limpiar importe hasta" (click)="limpiarHasta()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -71,7 +71,7 @@
         <input type="date" class="form-control" [(ngModel)]="fechaIni" (change)="buscar(true)">
         <button *ngIf="fechaIni" type="button" style="margin-right: 2.5rem;"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarIni()">
+          matTooltip="Limpiar fecha inicial" (click)="limpiarIni()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -82,7 +82,7 @@
         <input type="date" class="form-control" [(ngModel)]="fechaFin" (change)="buscar(true)">
         <button *ngIf="fechaFin" type="button" style="margin-right: 2.5rem;"
           class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-          (click)="limpiarFin()">
+          matTooltip="Limpiar fecha final" (click)="limpiarFin()">
           <fa-icon [icon]="faTimes"></fa-icon>
         </button>
       </div>
@@ -109,7 +109,7 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Det.</th>
       <td mat-cell *matCellDef="let r">
-        <button mat-icon-button (click)="toggleDetalle(r)" matTooltip="Ver detalle">
+        <button mat-icon-button (click)="toggleDetalle(r)" [matTooltip]="expandedId === r.compraId ? 'Ocultar detalle' : 'Ver detalle'">
           <mat-icon>{{ expandedId === r.compraId ? 'expand_less' : 'expand_more' }}</mat-icon>
         </button>
       </td>
