--- a/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.html
@@ -131,19 +131,19 @@
 
 
     <div class="paginacion" *ngIf="totalItems > 0">
-      <button (click)="goFirst()" [disabled]="page === 1" title="Inicio">
+      <button (click)="goFirst()" [disabled]="page === 1" matTooltip="Inicio">
         <i class="fa fa-angle-double-left"></i>
       </button>
-      <button (click)="goPrev()" [disabled]="page === 1" title="Anterior">
+      <button (click)="goPrev()" [disabled]="page === 1" matTooltip="Anterior">
         <i class="fa fa-angle-left"></i>
       </button>
 
       Página {{ page }} de {{ totalPages }} — {{ totalItems }} registros
 
-      <button (click)="goNext()" [disabled]="page === totalPages" title="Siguiente">
+      <button (click)="goNext()" [disabled]="page === totalPages" matTooltip="Siguiente">
         <i class="fa fa-angle-right"></i>
       </button>
-      <button (click)="goLast()" [disabled]="page === totalPages" title="Fin">
+      <button (click)="goLast()" [disabled]="page === totalPages" matTooltip="Fin">
         <i class="fa fa-angle-double-right"></i>
       </button>
     </div>
