--- a/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
@@ -229,19 +229,19 @@
         </table>
 
         <div class="paginacion">
-            <button (click)="primera()" [disabled]="cargando || page === 1">
+            <button (click)="primera()" [disabled]="cargando || page === 1" matTooltip="Primera página">
                 <i class="fa fa-angle-double-left"></i>
             </button>
-            <button (click)="anterior()" [disabled]="cargando || page === 1">
+            <button (click)="anterior()" [disabled]="cargando || page === 1" matTooltip="Página anterior">
                 <i class="fa fa-angle-left"></i>
             </button>
             Ventas: {{ totalRegistros }}
             &nbsp; | &nbsp; Página: {{ page }} / {{ totalPaginas || 1 }}
 
-            <button (click)="siguiente()" [disabled]="cargando || page === totalPaginas || totalPaginas === 0">
+            <button (click)="siguiente()" [disabled]="cargando || page === totalPaginas || totalPaginas === 0" matTooltip="Página siguiente">
                 <i class="fa fa-angle-right"></i>
             </button>
-            <button (click)="ultima()" [disabled]="cargando || page === totalPaginas || totalPaginas === 0">
+            <button (click)="ultima()" [disabled]="cargando || page === totalPaginas || totalPaginas === 0" matTooltip="Última página">
                 <i class="fa fa-angle-double-right"></i>
             </button>
         </div>
